Migrate to Java 8
Replaces some Guava call with Java equivalent

Use maven-shade-plugin 3.2.1 because of error:

    Failed to execute goal org.apache.maven.plugins:maven-shade-plugin:2.3:shade (default) on project jax-rs-linker: Error creating shaded jar: INVOKESPECIAL/STATIC on interfaces require ASM 5 -> [Help 1]